--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,11 @@
-
+body{
+    border:1px solid black;
+    background-color:gray;
+    margin:0px;
+    height:100%;
+}
 #topBar{
     border:1px solid black;
-    margin: -7.5;
     height: 50px;
     position:static;
 }
@@ -47,4 +51,44 @@
     position: relative;
     left:280px;
     bottom:35px;
+}
+#mainMail{
+    border:1px solid black;
+    position: relative;
+    width: 1025px;
+    margin-left:189px;
+    bottom:2.5px;
+    height: 84%;
+}
+#rightBar{
+    border:1px solid black;
+    position:relative;
+    bottom:184.7%;
+    width: 50px;
+    height:91.8%;
+    margin-left:auto;
+}
+#leftBar{
+    border:1px solid black;
+    position:relative;
+    width:188px;
+    bottom:92.5%;
+    margin-right:auto;
+    height:91.9%;
+}
+#subMail{
+    border:1px solid transparent;
+    margin-left:189px;
+    position:relative;
+    bottom:1px;
+    height:50px;
+    width:1025px;
+}
+.category{
+    border:1px solid black;
+    right:.2px;
+    position:relative;
+    bottom:1px;
+    height:50px;
+    width:1025px;
 }
