--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body{
     border:1px solid black;
     background-color:gray;
     margin:0px;
-    height:100%;
+    height:99.7%;
 }
 #topBar{
     border:1px solid black;
@@ -52,13 +52,24 @@ body{
     left:280px;
     bottom:35px;
 }
+
 #mainMail{
     border:1px solid black;
     position: relative;
     width: 1025px;
     margin-left:189px;
-    bottom:2.5px;
     height: 84%;
+    left:0px;
+    top:-1.5px;
+}
+.Mail{
+    border:1px solid white;
+    position: relative;
+    width: 800px;
+    height: 84%;
+    z-index: 2;
+    left:10px;
+    top: 10px;
 }
 #rightBar{
     border:1px solid black;
@@ -68,27 +79,76 @@ body{
     height:91.8%;
     margin-left:auto;
 }
+.rBar{
+    border:1px solid red;
+    position:relative;
+    width: 40px;
+    height:90.8%;
+    margin-left:auto;
+}
+
+
 #leftBar{
-    border:1px solid black;
+    border:1px solid pink;
     position:relative;
     width:188px;
     bottom:92.5%;
     margin-right:auto;
     height:91.9%;
 }
-#subMail{
-    border:1px solid transparent;
+.lBar{
+    border:1px solid red;
+    position:relative;
+    width:178px;
+    margin-right:auto;
+    height:97%;
+    bottom:-5px;
+}
+
+#catMenu{
+    border:1px solid red;
     margin-left:189px;
     position:relative;
     bottom:1px;
     height:50px;
     width:1025px;
+    z-index: 3;
+    border-radius: 0px 0px 0px 0px;
+    top:-1px;
 }
 .category{
-    border:1px solid black;
+    top:2px;
+    border:1px solid orange;
     right:.2px;
     position:relative;
-    bottom:1px;
-    height:50px;
-    width:1025px;
+    top:4px;
+    border-radius: 5px 5px 5px 5px;
+    height:40px;
+    width:800px;
+    margin-left:auto;
+    margin-right:auto;
+}
+#main{
+    height:150%;
+    background: white;
+    
+}
+.message{
+    display:none;
+}
+.content{
+    border:1px solid black;
+    text-align: center;
+}
+.date{
+    border:1px solid red;
+}
+.subject{
+    border:1px solid red;
+}
+.sender{
+    border:1px solid red;
+}
+.message{
+    border:1px solid red;
 }
