--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,17 @@
-body{
-    border:1px solid black;
-    background-color:white;
+body{/* just the body of the page*/
+    border:1px solid transparent;
+    background-color:whitesmoke;
     margin:0px;
     height:99.7%;
 }
-#topBar{
+/* everything inside the top bar section */
+#topBar{/*container to hold all the top menu things*/
     border:1px solid black;
     height: 50px;
     position: relative;
     bottom:543px;
 }
-#title{
+#title{/*title of page*/
     border:1px solid black;
     position:relative;
     width:200px;
@@ -20,19 +21,13 @@ body{
     border-radius: 5px 5px 5px 5px;
     background:white;
     box-shadow: 2px 2px 5px, -2px -2px 5px;
+    opacity:.7;
 }
-#title:hover{
-    background:black;
-    color:white;
+#title:hover{/*title of page*/
+    background:white;
+    color:red;
 }
-/* #pic{
-    border:1px solid transparent;
-    width: 50px;
-    position:relative;
-    bottom:77px;
-} */
-
-#g-Mail{
+#g-Mail{/*text for the title of the page*/
     border:1px solid transparent;
     position:relative;
     height:40px;
@@ -40,7 +35,15 @@ body{
     left:75px;
     top:5px;
 }
-#sBar{
+#pic{/*picture next to title, it's the group GANGSTAR cuz they're Gs (geemail, get it?)*/
+    border:1px solid transparent;
+    width: 50px;
+    position:relative;
+    bottom:77px;
+    right:5px;
+}
+
+#sBar{/*search bar top menu things*/
     border:1px solid transparent;
     width:340px;
     height:30px;
@@ -49,17 +52,21 @@ body{
     margin-right:auto;
     bottom:30px;
 }
-#sBar input{
+#sBar input{/*search bar top menu things*/
     width:300px;
     height:25px;
 }
-#sBtn{
+#sBtn{/*search bar top menu things*/
     border:1px solid transparent;
     position: relative;
     left:280px;
     bottom:35px;
 }
+/* everything inside the top bar section */
 
+
+/* has no real function but i'm keeping it because it will resize my page.
+i was going to use it to hold the main mailbox, but i ended up not needing it.*/
 #mainMail{
     border:1px solid transparent;
     position: relative;
@@ -78,7 +85,10 @@ body{
     left:10px;
     top: 10px;
 } */
-#rightBar{
+
+
+/* right side bar things */
+#rightBar{/* has no real function but i'm keeping it because it will resize my page */
     border:1px solid transparent;
     position:relative;
     bottom:265%;
@@ -86,7 +96,7 @@ body{
     height:92%;
     margin-left:auto;
 }
-.rBar{
+.rBar{/*container to hold all my information */
     border:1px solid black;
     position:relative;
     width: 60px;
@@ -94,9 +104,10 @@ body{
     margin-left:auto;
     box-shadow:-1px 0px;
 }
+/* right side bar things */
 
-
-#leftBar{
+/* left side bar things */
+#leftBar{/* has no real function but i'm keeping it because it will resize my page */
     border:1px solid transparent;
     position:relative;
     width:188px;
@@ -104,7 +115,7 @@ body{
     margin-right:auto;
     height:91.9%;
 }
-.lBar{
+.lBar{/* container to put all my information in for left bar*/
     border:1px solid black;
     position:relative;
     width:189px;
@@ -113,12 +124,14 @@ body{
     bottom:1px;
     overflow-y:auto;
 }
-.list1{
+.list1{/* random list to give content to page */
     color:black;
     text-align:center;
     list-style-type:none;
 }
+/* left side bar things */
 
+/* category menu above the main mail box */
 #catMenu{
     border:1px solid black;
     margin-left:189.2px;
@@ -141,7 +154,9 @@ body{
     margin-left:auto;
     margin-right:auto;
 }
+/* category menu above the main mail box */
 
+/* main mail box holds all information */
 #main{
     height:84%;
     overflow-y:auto;
@@ -154,7 +169,14 @@ body{
 
 }
 
-.message{
+.content{/* container to hold all the information given below */
+    border:.3px solid black;
+    text-align: center;
+    background:whitesmoke;
+}
+
+
+.message{/* contains message of the email */
     display:none;
     border:1px solid black;
     width:500px;
@@ -169,18 +191,12 @@ body{
     transition:1.2s;
 
 }
-.message:hover{
+.message:hover{/* hover for message box increases size for the blind*/
     transform:scale(1.3);
     transition:1.2s;
 }
-.content{
-    border:.3px solid black;
-    text-align: center;
-    background:whitesmoke;
-}
 
-
-.date{
+.date{/* date of email sent */
     border:.5px solid black;
     width:80px;
     top:2px;
@@ -192,12 +208,12 @@ body{
     border-radius:3px 3px 3px 3px;
     box-shadow: 2px 2px 5px,-1px -1px 2px;
 }
-.date:hover{
+.date:hover{/* date hover  */
     background:blue;
     opacity:.5;
     color:white;
 }
-.subject{
+.subject{/* subjecct of email */
     border:.5px solid black;
     width:350px;
     margin-left:auto;
@@ -207,12 +223,12 @@ body{
     border-radius: 3px 3px 3px 3px;
     box-shadow: 2px 2px 5px,-1px -1px 2px;
 }
-.subject:hover{
+.subject:hover{/*subject hover */
     background:blue;
     opacity:.5;
     color:white;
 }
-.sender{
+.sender{/* who sent the mail */
     border:.5px solid black;
     position: relative;
     width:100px;
@@ -221,8 +237,9 @@ body{
     border-radius:3px 3px 3px 3px;
     box-shadow: 2px 2px 5px,-1px -1px 2px;
 }
-.sender:hover{
+.sender:hover{/*sender hover */
     background:blue;
     opacity:.5;
     color:white;
 }
+/* main mail box holds all information */
