made emails generate randomly maybe fixed top bar?

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body{/* just the body of the page*/
     border:1px solid black;
     height: 50px;
     position: relative;
-    bottom:543px;
+    bottom:84.2%;
 }
 #title{/*title of page*/
     border:1px solid black;
